Kafka topic data injection created

--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,11 @@
       <artifactId>storm-redis</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.storm</groupId>
+      <artifactId>storm-kafka</artifactId>
+      <version>1.0.1</version>
+    </dependency>
   </dependencies>
 
   <build>
